--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,29 +10,30 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.0",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "axios": "^1.6.0",
-    "react-icons": "^4.10.1",
-    "framer-motion": "^10.16.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.292.0",
-    "clsx": "^2.0.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.3.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.0",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
+    "vite": "^4.4.0"
   }
 }
