--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2",
+    "@google-cloud/speech": "^6.0.0",
+    "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "axios": "^1.6.0",
-    "@google-cloud/speech": "^6.0.0",
+    "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "node-wav": "^0.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "wav": "^1.0.2"
   },
   "devDependencies": {
